@@ -43,6 +43,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 17010) maintenance/namespaceDupes.php now add the suffix recursively if
   the destination page exists
 * Page moves should not be minor edits
+* (bug 17035) Special:Upload now fails gracefully if PHP's file_uploads has been
+  disabled
 
 == API changes in 1.15 ==
 * (bug 16858) Revamped list=deletedrevs to make listing deleted contributions
